<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.mrabid.bumidesa.SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/lnr_1_splash">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:layout_marginTop="-40dp"
            android:background="@drawable/splash">

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_45sdp"
            android:text="@string/selamat_datang_di"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/colorBlack"
            android:textSize="28sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_70sdp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_gravity="center_horizontal">
            <ImageButton
                android:clickable="false"
                android:layout_width="@dimen/_170sdp"
                android:background="@drawable/button_splash"
                android:layout_height="@dimen/_50sdp" />
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_mulai_splashScreen"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/mulai"
                android:textColor="@color/colorWhite"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_mulai_splashScreen"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:src="@drawable/ic_arrow_forward"/>
        </RelativeLayout>


    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sudah_memiliki_akun"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:layout_above="@+id/tv_login_disini"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_login_disini"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_disini"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorButtonSplash"
            android:textSize="18sp"
            android:layout_marginBottom="@dimen/_20sdp"/>


</RelativeLayout>
