<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mrabid.bumidesa.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lnr_login_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/main_toolbar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/bergabung_bersama"
                android:textAlignment="center"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_20sdp"
                xmlns:facebook="http://schemas.android.com/apk/res-auto">

                <!--<com.facebook.login.widget.LoginButton-->
                <!--android:layout_width="@dimen/_150sdp"-->
                <!--android:layout_height="@dimen/_100sdp"-->
                <!--android:text="Facebook"/>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <View
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_gravity="center"
                    android:background="@color/line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Or  "
                    android:textColor="@color/colorBlack" />

                <View
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_gravity="center"
                    android:background="@color/line" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/edt_nama_lengkap_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_lengkap"
                    android:textColor="@color/colorBlack" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/edt_email_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/edt_telepon_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telepon"
                    android:inputType="number"
                    android:textColor="@color/colorBlack" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edt_password_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/edt_ulangi_password_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ulangi"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_daftar_register_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/button_splash"
                android:text="@string/daftar"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
