<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mrabid.bumidesa.Fragment.PengaturanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/pengaturan"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/rlt_kata_sandi_pengaturan_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="@string/ubah_kata_sandi"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgv_arrow_right_kata_sandi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/rlt_tentang_kami_pengaturan_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="Tentang Kami"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgv_arrow_right_tentang_kami"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/rlt_faq_pengaturan_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="FAQ"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgv_arrow_right_faq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/rlt_syarat_ketentuan_pengaturan_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:text="@string/syarat_dan_ketentuan"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgv_arrow_right_syarat_ketentuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlt_versi_pengaturan_fragment"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/versi"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_above="@+id/rlt_versi_pengaturan_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <TextView
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/keluar"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>
